--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ select option {
 </div>
 <!-- column 2 ends -->
 <!-- full width cta button -->
-<div class="col-12"> <a class="dtr-btn btn-cta w-100 btn-green dtr-mt-100 wow fadeInUp" data-wow-delay="0.2s" href="#contact">Register Now</a> </div>
+<div class="col-12"> <a class="dtr-btn btn-cta w-100 btn-green dtr-mt-100 wow fadeInUp" data-wow-delay="0.2s" href="#contact-form">Register Now</a> </div>
 <!-- button ends -->
 <div class="dtr-countdown-wrapper">
     <ul class="dtr-countdown countdown1">
