--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ select option {
 <p class="dtr-big-outline-text big-text-color-dark">2024</p>
 <div class="container">
 <!-- heading -->
-<h2 class="dtr-xl-heading">The Speakers</h2>
+<h2 class="dtr-xl-heading">The Speaker</h2>
 <!--===== row 1 starts =====-->
 <div class="row align-items-center">
 <!-- column 1 starts -->
@@ -509,7 +509,7 @@ select option {
 <div class="row">
 <!-- column 1 starts -->
 <div class="col-12 col-md-6">
-<p>© 2024 SPIRITUAL BULLETIN. Website Dseisgn By <a href="https://wa.me/919432662655?text=Hi%2C%20I%20would%20like%20to%20know%20more%20about%20your%20services.
+<p>© 2024 SPIRITUAL BULLETIN. Website Deisgn By <a href="https://wa.me/919432662655?text=Hi%2C%20I%20would%20like%20to%20know%20more%20about%20your%20services.
 	"> <span style="color: aqua"> SkyDigi </span></a></p>
 </div>
 <!-- column 1 ends -->
